
    * Progress bars are now nested - see
      bzrlib.ui.ui_factory.nested_progress_bar. (Robert Collins, Robey Pointer)

    * New API call get_format_description() for each type of format.
      (Olaf Conradi)

    * Changed branch.set_parent() to accept None to remove parent.
      (Olaf Conradi)

    * Deprecated BzrError AmbiguousBase.  (Olaf Conradi)

  TESTING:

    * SFTP tests now shortcut the SSH negotiation, reducing test overhead
      for testing SFTP protocol support. (Robey Pointer)

    * Branch formats are now tested once per implementation (see bzrlib.
      tests.branch_implementations. This is analagous to the transport
      interface tests, and has been followed up with working tree,
      repository and BzrDir tests. (Robert Collins)

    * New test base class TestCaseWithTransport provides a transport aware
      test environment, useful for testing any transport-interface using
      code. The test suite option --transport controls the transport used
      by this class (when its not being used as part of implementation
      contract testing). (Robert Collins)

    * Close logging handler on disabling the test log. This will remove the
      handler from the internal list inside python's logging module,
      preventing shutdown from closing it twice.  (Olaf Conradi)

    * Move test case for uncommit to blackbox tests.  (Olaf Conradi)

bzr 0.7rc1 2006-01-09

  CHANGES:

    * .bzrignore is excluded from exports, on the grounds that it's a bzr 
      internal-use file and may not be wanted.  (Jamie Wilkinson)

    * The "bzr directories" command were removed in favor of the new
      --kind option to the "bzr inventory" command.  To list all 
      versioned directories, now use "bzr inventory --kind directory".  
      (Johan Rydberg)

    * Under Windows configuration directory is now %APPDATA%\bazaar\2.0
      by default. (John Arbash Meinel)

    * The parent of Bzr configuration directory can be set by BZR_HOME